grammar.js
    source_file: ($) =>
      seq(optional(seq($.shebang, $._newline)), repeat($._item)),

    // item          : alias
    //               | assignment
    //               | eol
    //               | export
    //               | function
    //               | import
    //               | module
    //               | recipe
    //               | setting
    _item: ($) =>
      choice(
        $.alias,
        $.assignment,
        $.export,
        $.function,
        $.import,
        $.module,
        $.recipe,
        $.setting,
      ),

    // alias         : 'alias' NAME ':=' target eol
    target: ($) => seq($.identifier, repeat(seq("::", $.identifier))),

    // assignment    : NAME ':=' expression eol
    assignment: ($) =>
      seq(
        field("left", $.identifier),
        ":=",
        field("right", $.expression),
        $._newline,
      ),

    // export        : 'export' assignment
    setting: ($) => seq("set", $._setting, $._newline),

    // setting       : 'allow-duplicate-recipes' boolean?
    //               | 'allow-duplicate-variables' boolean?
    //               | 'default-list' boolean?
    //               | 'default-script' boolean?
    //               | 'dotenv-command' ':=' string
    //               | 'dotenv-filename' ':=' string
    //               | 'dotenv-load' boolean?
    //               | 'dotenv-override' boolean?
    //               | 'dotenv-path' ':=' string
    //               | 'dotenv-required' boolean?
    //               | 'export' boolean?
    //               | 'fallback' boolean?
    //               | 'guards' boolean?
    //               | 'ignore-comments' boolean?
    //               | 'indentation' ':=' string
    //               | 'lazy' boolean?
    //               | 'lists' boolean?
    //               | 'minimum-version' ':=' string
    //               | 'no-cd' boolean?
    //               | 'no-exit-message' boolean?
    //               | 'positional-arguments' boolean?
    //               | 'script-interpreter' ':=' string_list
    //               | 'quiet' boolean?
    //               | 'shell' ':=' string_list
    //               | 'tempdir' ':=' string
    //               | 'unstable' boolean?
    //               | 'windows-powershell' boolean?
    //               | 'windows-shell' ':=' string_list
    //               | 'working-directory' ':=' string
    _setting: ($) =>
      choice(
        set_variant("allow-duplicate-recipes", $.boolean, true),
        set_variant("allow-duplicate-variables", $.boolean, true),
        set_variant("default-list", $.boolean, true),
        set_variant("default-script", $.boolean, true),
        set_variant("dotenv-command", $.string),
        set_variant("dotenv-filename", $.string),
        set_variant("dotenv-load", $.boolean, true),
        set_variant("dotenv-override", $.boolean, true),
        set_variant("dotenv-path", $.string),
        set_variant("dotenv-required", $.boolean, true),
        set_variant("export", $.boolean, true),
        set_variant("fallback", $.boolean, true),
        set_variant("guards", $.boolean, true),
        set_variant("ignore-comments", $.boolean, true),
        set_variant("indentation", $.string),
        set_variant("lazy", $.boolean, true),
        set_variant("lists", $.boolean, true),
        set_variant("minimum-version", $.string),
        set_variant("no-cd", $.boolean, true),
        set_variant("no-exit-message", $.boolean, true),
        set_variant("positional-arguments", $.boolean, true),
        set_variant("script-interpreter", $.string_list),
        set_variant("quiet", $.boolean, true),
        set_variant("shell", $.string_list),
        set_variant("tempdir", $.string),
        set_variant("unstable", $.boolean, true),
        set_variant("windows-powershell", $.boolean, true),
        set_variant("windows-shell", $.string_list),
        set_variant("working-directory", $.string),
      ),

    // function      : NAME '(' parameters? ')' ':=' expression
    boolean: (_) => choice("true", "false"),

    // expression    : disjunct || expression
    //               | disjunct
    expression: ($) => $._expression_inner,

    // disjunct      : conjunct && disjunct
    //               | conjunct
    _expression_inner: ($) =>
      prec.left(
        seq($._disjunct, optional(seq(LOGICAL_OR, $._expression_recurse))),
      ),

    // We can't mark `_expression_inner` inline because it causes an infinite
    // loop at generation, so we just alias it.
    value: ($) =>
      prec.left(
        choice(
          $.function_call,
          $.external_command,
          $.identifier,
          $.string,
          $.numeric_error,
          seq("(", $.expression, ")"),
        ),
      ),

    function_call: ($) =>
      seq(
        field("name", $.identifier),
        "(",
        optional(field("arguments", $.sequence)),
        ")",
      ),

    external_command: ($) =>
      choice(seq($._backticked), seq($._indented_backticked)),

    // sequence      : expression ',' sequence
    //               | expression ','?
    attribute_kv_argument: ($) =>
      seq(field("key", $.identifier), "=", field("value", $.string)),

    // This is seemingly incorrect with what is actually possible, hence the
    // attribute_kv_argument above.
    // attribute     : NAME
    //               | NAME ':' string
    //               | NAME '(' attribute_argument (',' attribute_argument)* ')'
    // attribute_argument : expression
    //                    | NAME '=' string
    attribute: ($) =>
      seq(
        $.identifier,
        optional(
          choice(
            seq(":", field("argument", $.string)),
            seq(
              "(",
              field(
                "argument",
                comma_sep1(choice($.expression, $.attribute_kv_argument)),
              ),
              ")",
            ),
          ),
        ),
      ),

    // attributes    : '[' attribute (',' attribute)* ']' eol
    attributes: ($) => seq("[", comma_sep1($.attribute), "]", $._newline),

    // A complete recipe
    // recipe        : attributes* '@'? NAME parameter* variadic? ':' dependencies eol body?
    recipe: ($) =>
      seq(
        repeat($.attributes),
        $.recipe_header,
        $._newline,
        optional($.recipe_body),
      ),

    recipe_header: ($) =>
      seq(
        optional("@"),
        field("name", choice($.identifier, alias("import", $.identifier))),
        optional($.parameters),
        ":",
        optional($.dependencies),
      ),

    parameters: ($) =>
      seq(repeat($.parameter), choice($.parameter, $.variadic)),

    // parameter     : '$'? NAME
    //               | '$'? NAME '=' value
    parameter: ($) =>
      seq(
        optional("$"),
        field("name", $.identifier),
        optional(seq("=", field("default", $.value))),
      ),

    // variadic      : '*' parameter
    //               | '+' parameter
    variadic: ($) => seq(field("kleene", choice("*", "+")), $.parameter),

    // dependencies  : dependency* ('&&' dependency+)?
    dependencies: ($) => repeat1(seq(optional(LOGICAL_AND), $.dependency)),

    // dependency    : target
    //               | '(' target expression* ')'
    dependency: ($) => choice(field("name", $.target), $.dependency_expression),

    dependency_expression: ($) =>
      seq("(", field("name", $.target), repeat($.expression), ")"),

    // body          : INDENT line+ DEDENT
    recipe_body: ($) =>
      seq(
        $._indent,
        optional(seq(field("shebang", $.shebang), $._newline)),
        repeat(choice(seq($.recipe_line, $._newline), $._newline)),
        $._dedent,
      ),

    // line          : LINE LINE_PREFIX? (TEXT | interpolation)+ NEWLINE
    //               | NEWLINE
    recipe_line: ($) =>
      seq(
        optional($.recipe_line_prefix),
        repeat1(choice($.text, $.interpolation)),
      ),

    // All of the options for the '@', '?', '-' sigils.
    // Using a regex constant token doesn't allow the @operator query in
    // highlights.scm to match on them, hence the use of `choice(...)`.
    recipe_line_prefix: (_) =>
      choice(
        "@",
        "-",
        "?",
        "@-",
        "@?",
        "-@",
        "-?",
        "?@",
        "?-",
        "@-?",
        "@?-",
        "-@?",
        "-?@",
        "?@-",
        "?-@",
      ),

    // Any shebang. Needs a named field to apply injection queries correctly.
    shebang: ($) =>
      seq(/#![ \t]*/, choice($._shebang_with_lang, $._opaque_shebang)),

    // Shebang with a nested `language` token that we can extract
    _shebang_with_lang: ($) =>
      seq(
        /\S*\//,
        optional(seq("env", repeat(SHEBANG_ENV_FLAG))),
        alias($.identifier, $.language),
        /.*/,
      ),

    // Fallback shebang, any string
    _opaque_shebang: (_) => /[^/\n]+/,

    // string_list   : '[' string (',' string)* ','? ']'
    string: ($) =>
      choice(
        $._string_indented,
        $._raw_string_indented,
        $._string,
        // _raw_string, can't be written as a separate inline for osm reason
        /[xf]?'[^']*'/,
      ),

    _raw_string_indented: ($) => seq(/[xf]?'''/, repeat(/./), "'''"),
    _string: ($) =>
      seq(/[xf]?"/, repeat(choice($.escape_sequence, /[^\\"]+/)), '"'),
    // We need try two separate munches so neither escape sequences nor
    // potential closing quotes get eaten.
    _string_indented: ($) =>
      seq(
        /[xf]?"""/,
        repeat(choice($.escape_sequence, /[^\\]?[^\\"]+/)),
        '"""',
      ),

    _backticked: ($) => seq("`", optional($.command_body), "`"),
    _indented_backticked: ($) => seq("```", optional($.command_body), "```"),

    command_body: ($) => repeat1(choice($.interpolation, /./)),

    // interpolation : '{{' expression '}}'
    interpolation: ($) => seq("{{", $.expression, "}}"),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_-]*/,

    // Numbers aren't allowed as values, but we capture them anyway as errors so
    // they don't mess up the whole syntax
    comment: (_) => token(prec(-1, /#.*/)),
  },
});
